# yolov5

./: export.py  train.py
data/: README.md  tooth.yaml
deploy/ncnn/: CMakeLists.txt  README.md  yolov5.cpp
utils/: plots.py
